...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/height_toolbar"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/albumRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/plus"
        app:fabSize="normal"
        android:layout_margin="16dp"
...
